2007-12-22  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/main.c
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/nm-connection-editor.glade
	  src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- Start cleaning up the connection editor

2007-12-22  Dan Williams  <dcbw@redhat.com>

	Patch from Christian Persch <chpe@gnome.org> (gnome.org #503831)

	* src/applet.c
		- (about_dialog_handle_url_cb, about_dialog_handle_email_cb): use the
			screen the about dialog is on, not the default screen

2007-12-17  Dan Williams  <dcbw@redhat.com>

	Patch from Jaap A. Haitsma <jaap@haitsma.org>

	* src/applet.c
		- (nma_about_cb, about_dialog_handle_email_cb,
		   about_dialog_handle_url_cb, nma_constructor): set default window
			icon, make email links clickable, set website label (gnome.org #503831)

2007-12-14  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- (init_app): hook up a double-click handler; select first item in the
			list if there is one (gnome.org #334883)

2007-12-13  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- Get Connections from the system settings daemon if it's around, and
			track changes to those Connections	

2007-12-13  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- Allow other apps to query connections

2007-12-10  Dan Williams  <dcbw@redhat.com>

	Noticed by Christian Persch <chpe@gnome.org> (gnome.org #500516)

	* configure.ac
		- Require gmodule-export package

	* src/connection-editor/Makefile.am
	  src/connection-editor/byte-array-editor.c
	  src/connection-editor/nm-connection-editor.glade
		- HIG-ify

2007-12-10  Tambet Ingo  <tambet@gmail.com>

	* Replace all occurences of 'UMTS' with 'GSM'.

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* configure.ac
	  src/main.c
	  src/vpn-properties/Makefile.am